# work-recap

./: .env.example  .env.test  .gitignore  CLAUDE.md  README.md  design.md  pricing.toml  pyproject.toml  run_yearly.sh  schedule.toml
designs/: api.md  cli.md  config.md  exceptions.md  fetcher.md  frontend.md  ghes_client.md  llm_client.md  models.md  normalizer.md  orchestrator.md  phase0-setup.md  storage_v2.md  summarizer.md  sync-over-async.md
docs/plans/: 2026-02-28-scheduler-design.md  2026-02-28-scheduler-impl.md  2026-02-28-telegram-notifier-design.md  2026-02-28-telegram-notifier-impl.md  2026-02-28-ui-redesign-design.md  2026-02-28-ui-redesign-phase1.md  2026-03-02-telegram-llm-summary-design.md  2026-03-02-telegram-llm-summary-impl.md
frontend/: app.js  index.html  style.css
frontend/js/: api.js  app.js  ask.js  pipeline.js  scheduler.js  summaries.js
prompts/: daily.md  daily_detailed.md  enrich.md  monthly.md  query.md  telegram.md  weekly.md  yearly.md
scripts/: check_env.py
scripts/launchd/: com.workrecap.server.plist  start.sh
src/git_recap/: __main__.py  config.py  exceptions.py  logging_config.py  models.py
src/workrecap/: __main__.py  config.py  exceptions.py  logging_config.py  models.py
tests/: conftest.py
tests/integration/: conftest.py  test_config_and_providers.py  test_integration.py
tests/unit/: test_api.py  test_api_scheduler.py  test_api_summaries_available.py  test_batch_anthropic.py  test_batch_gemini.py  test_batch_mixin.py  test_batch_normalizer.py  test_batch_openai.py  test_batch_router.py  test_batch_state.py  test_batch_summarizer.py  test_checkpoint.py  test_cli.py  test_client_pool.py  test_config.py  test_daily_state.py  test_date_utils.py  test_embedding_client.py  test_escalation.py  test_exceptions.py  test_failed_dates.py  test_fetch_progress.py  test_fetcher.py  test_file_logging.py  test_ghes_client.py  test_llm_client.py  test_llm_router.py  test_logging_config.py  test_models.py  (+19 more)
(+68 files in other folders)
