[project]
name = "work-recap"
version = "0.1.0"
description = "GHES activity summarizer with LLM"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.12",
    "pydantic-settings>=2.13",
    "typer>=0.24",
    "fastapi>=0.129",
    "uvicorn>=0.41",
    "openai>=2.21",
    "anthropic>=0.82",
    "google-genai>=1.64",
    "jinja2>=3.1",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "chromadb>=0.6.3",
    "apscheduler>=3.10,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "respx>=0.22",
    "coverage>=7.13",
    "ruff>=0.15",
]

[project.scripts]
recap = "workrecap.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workrecap"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: real API integration tests (require .env)",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py312"
